--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2>Developer</h2>
 		<br />
 		<!--<a href="My CV.html" class="btn-rounded-white">View   Resume</a><br /><br />--->
-	    <a href="https://github.com/tarunkumar519/tarunkumar519.github.io/raw/master/TARUN_KUMAR.pdf" class="btn-rounded-white">Download Resume</a>
+	    <a href="https://raw.githubusercontent.com/tarunkumar519/Resume/master/TARUN_KUMAR.pdf" class="btn-rounded-white">Download Resume</a>
 		
 	    
         </div>
