--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		
 	    
         </div>
-	     <div id="lead">
+	     <div id="lead-content">
 	    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="e9b27625-b8df-44dd-a24f-12904a698ed3" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
 	    </div>
 		     <!-- End #lead-content -->
