--- a/index.html
+++ b/index.html
@@ -280,7 +280,13 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
 		    <p>Email : tarunreddy17519@gmail.com</p><br>
-                    <p>Copyright &copy; 2021 Tarun Kumar Reddy</p>
+                    <div>
+    &copy;
+    <span id="copyright">
+        <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+    </span>
+    Tarun kumar reddy
+</div>
                 </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
