--- a/index.html
+++ b/index.html
@@ -112,17 +112,9 @@
             <h3>Sphoorthy Engineering College</h3>
             <span class="education-date">July 2017 - current</span>
             <h4>Bachelor of Technology in Computer Science</h4>
-            <ul>
-                <li>
-                    First year result : 7.8 CGPA.
-                </li>
-                <li>
-                    Second year result : 7.6 CGPA.
-                </li>
-	    	<li>
-                    Third year result : 7.5 CGPA.
-                </li>
-            </ul>
+			<h4>
+                Current 7.5 CGPA.
+            </h4>
         </div>
         <!-- End .education-block -->
     </div>
