--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <span class="education-date">July 2017 - current</span>
             <h4>Bachelor of Technology in Computer Science</h4>
 			<h4>
-                Current 7.5 CGPA.
+                Current 75% overall.
             </h4>
         </div>
         <!-- End .education-block -->
