--- a/index.html
+++ b/index.html
@@ -231,20 +231,20 @@
         <h2 class="heading">Skills</h2>
         <ul>
         <li>Machine Learning</li>
-        <li>Deep Learning</li>
-	    <li>Android Development</li>
+        <li>Deep Learning(basics)</li>
+	    <li>Android Development(basics)</li>
             <li>Python</li>
 	    <li>C</li>
-            <li>C++</li>
+            <li>C++(basics)</li>
 	    <li>Shell Scripting</li>
-            <li>Core-Java</li>
+            <li>Core-Java(basics)</li>
 	    <li>NumPy</li>
         <li>MatPlotLib</li>
         <li>OpenCV</li>
 	    <li>Tkinter</li>
 	    <li>Web Development</li>
 	    <li>SQLite</li>
-	    <li>MySQL</li>
+	    <li>MySQL(basics)</li>
 	    <li>GIT</li>
 	    <li>HTML/CSS</li>
 	    
