--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <!-- End #projects -->
 	
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Skills and Badges</h2>
         <ul>
         <li>Machine Learning</li>
         <li>Deep Learning(basics)</li>
