--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="#projects">Projects</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
+                <a href="#skills">Skills and Badges</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
