--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
             <li>Python</li>
 	    <li>C</li>
             <li>C++(basics)</li>
+		<li>Linux</li>
 	    <li>Shell Scripting</li>
             <li>Core-Java(basics)</li>
 	    <li>NumPy</li>
