--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://tarunkumar519.github.io/_posts">
+<meta http-equiv="refresh" content="0; url=https://tarunkumar519.github.io/_posts/preview.md">
