--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<title>Julian Garnier</title>
+<title>Tarun Reddy</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <meta name="description" content="I design and code things on the web." />
-<meta property="og:site_name" content="juliangarnier.com" />
+<meta property="og:site_name" content="tarunx.me" />
 <meta property="og:title" content="Julian Garnier" />
-<meta property="og:description" content="I design and code things on the web." />
+<meta property="og:description" content="I design and code apps and things on the web." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://juliangarnier.com" />
-<meta property="og:image" content="http://juliangarnier.com/img/og-image.png" />
+<meta property="og:url" content="http://tarunx.me" />
+<meta property="og:image" content="http://tarunx.me/img/og-image.png" />
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:width" content="768" />
 <meta property="og:image:height" content="416" />
@@ -19,12 +19,12 @@
   <div class="messages"></div>
   <script src="js/anime.js"></script>
   <script src="js/scripts.js"></script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-37236197-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RMFTETF0VE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RMFTETF0VE');
+</script>
 </body>
