--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
   body {
     background: #000000;
   }
-  h1, .tsummary {
-    color: #eeeeee;
-  }
+.bubble .loading b {
+  display: inline-block;
+  color: #FFFFFF;
+}
 }
 </style>
 <body>
