--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   display: inline-block;
   color: #FFFFFF;
 }
+ .bubble span.message {
+  opacity: 0;
+   color: #FFFFFF
+}
 }
 </style>
 <body>
