--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <title>Tarun Reddy</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<meta name="description" content="I design and code things on the web." />
+<meta name="description" content="Soft" />
 <meta property="og:site_name" content="tarunx.me" />
-<meta property="og:title" content="Julian Garnier" />
-<meta property="og:description" content="I design and code apps and things on the web." />
+<meta property="og:title" content="Tarun Reddy" />
+<meta property="og:description" content="Software developer, Freelancer." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://tarunx.me" />
 <meta property="og:image" content="http://tarunx.me/img/og-image.png" />
@@ -27,6 +27,9 @@
  .bubble span.message {
   opacity: 0;
    color: #FFFFFF
+}
+.bubble a {
+  color: #f8f907;
 }
 }
 </style>
