--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>Tarun Reddy</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<meta name="description" content="Soft" />
+<meta name="description" content="Software developer, Freelancer." />
 <meta property="og:site_name" content="tarunx.me" />
 <meta property="og:title" content="Tarun Reddy" />
 <meta property="og:description" content="Software developer, Freelancer." />
