--- a/movies.html
+++ b/movies.html
@@ -5,10 +5,10 @@
     <body>
         <video class="op-player__media" id="player" controls playsinline>
             <source src="https://nw5.seedr.cc/ff_get/1145855624/The.Batman.2022.1080p.HDRip-C1NEM4.mkv?st=d0UtdyndCHxR0yjKx85s3w&e=1649957592" type="video/mp4" title="1080p" />
-<track kind="subtitles" src="The.Batman.2022.1080p.HDTS-C1NEM4" srclang="en" label="English" />
+<track kind="subtitles" src="The.Batman.2022.1080p.HDTS-C1NEM4.srt" srclang="en" label="English" />
 <source src="https://nl21.seedr.cc/ff_get/1145859844/The.Batman.2022.720p.HDRip.900MB.c1nem4.x264-SUNSCREEN.mkv?st=Nqra_Ij8-XfSU0R7-OzhXg&e=1649957964" type="video/mp4" title="720p">
 </video>
-            <track kind="subtitles" src="The.Batman.2022.1080p.HDTS-C1NEM4" srclang="en" label="English" />
+            <track kind="subtitles" src="The.Batman.2022.1080p.HDTS-C1NEM4.srt" srclang="en" label="English" />
         </video>
         <script src="https://cdn.jsdelivr.net/npm/openplayerjs@latest/dist/openplayer.min.js"></script>
 
