--- a/movies.html
+++ b/movies.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/openplayerjs@latest/dist/openplayer.min.css" />
     </head>
     <body>
+	<h1><a href="url">Click here for blurred Ads version</a></h1><br>
 	<h1>The Batman 2022 (with small Ads)</h1><br>
 	<h2> (plays best in laptops)- leaked file Apr 13</h2>
         <video class="op-player__media" id="player" controls playsinline>
