--- a/noads.html
+++ b/noads.html
@@ -4,7 +4,7 @@
     </head>
     <body>
 	<h1><a href="url">Click here for blurred Ads version</a></h1><br>
-	<h1>The Batman 2022 (with small Ads)</h1><br>
+	<h1>The Batman 2022 (NO Ads)- but lower quality image</h1><br>
 	<h2> (plays best in laptops)- leaked file Apr 13</h2>
         <video class="op-player__media" id="player" controls playsinline>
             <source src="https://nw10.seedr.cc/ff_get/1145903652/The%20Batman%20(2022)%201080p%20HDRip%20x264%20-%20ProLover.mp4?st=Tc3bYWnL-gOSb-bKf_WntA&e=1649960508" type="video/mp4" title="1080p" />
