--- a/noads.html
+++ b/noads.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/openplayerjs@latest/dist/openplayer.min.css" />
     </head>
     <body>
-	<h1><a href="url">Click here for blurred Ads version</a></h1><br>
+	<h1><a href="url">Click here for higher quality version(But has Ads)</a></h1><br>
 	<h1>The Batman 2022 (NO Ads)- but lower quality image</h1><br>
 	<h2> (plays best in laptops)- leaked file Apr 13</h2>
         <video class="op-player__media" id="player" controls playsinline>
