--- a/noads.html
+++ b/noads.html
@@ -1,5 +1,10 @@
 <html>
     <head>
+    <style>
+body {
+  background-image: url('thebatman.jpg');
+}
+</style>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/openplayerjs@latest/dist/openplayer.min.css" />
     </head>
     <body>
