--- a/movies.html
+++ b/movies.html
@@ -10,10 +10,9 @@ body {
     <body>
 	<h1>The Batman 2022 1080P Blurred ads</h1><br>
         <video class="op-player__media" id="player" controls playsinline>
-            <source src="https://nw10.seedr.cc/ff_get/1145903652/The%20Batman%20(2022)%201080p%20HDRip%20x264%20-%20ProLover.mp4?st=Tc3bYWnL-gOSb-bKf_WntA&e=1649960508" type="video/mp4" title="1080p" />
+            <source src="https://nw10.seedr.cc/ff_get/1145903652/The%20Batman%20(2022)%201080p%20HDRip%20x264%20-%20ProLover.mp4?st=Tc3bYWnL-gOSb-bKf_WntA&e=1649960508" type="video/mp4" title="1080p" playsinline/>
 <track kind="subtitles" src="thebatman.srt" srclang="en" label="English" />
-<source src="https://nw10.seedr.cc/ff_get/1145903652/The%20Batman%20(2022)%201080p%20HDRip%20x264%20-%20ProLover.mp4?st=Tc3bYWnL-gOSb-bKf_WntA&e=1649960508" type="video/mp4" title="720p">
-</video>
+<source src="https://nw10.seedr.cc/ff_get/1145903652/The%20Batman%20(2022)%201080p%20HDRip%20x264%20-%20ProLover.mp4?st=Tc3bYWnL-gOSb-bKf_WntA&e=1649960508" type="video/mp4" title="720p" playsinline>
             <track kind="subtitles" src="thebatman.srt" srclang="en" label="English" />
         </video>
         <script src="https://cdn.jsdelivr.net/npm/openplayerjs@latest/dist/openplayer.min.js"></script>
