--- a/movies.html
+++ b/movies.html
@@ -21,4 +21,4 @@
   p.init();
 });
 
-        </script><p>&copy; 2022 Tarun Reddy</body></html>
+        </script><p class="lrqdm0 lrqdmi lrqdm9">&copy; 2022 Tarun Reddy</body></html>
