Update Apple One - Apple (IN).html

--- a/Apple One - Apple (IN).html
+++ b/Apple One - Apple (IN).html
@@ -107,7 +107,7 @@
 					<div class="copy-container">
 						<h2 class="typography-section-headline plans-headline large-10 medium-12 small-12 center">Apple One Family sharing.</h2>
 						<p class="typography-eyebrow large-7 medium-9 small-12 center">With family sharing we can reduce the cost of all 4 Apple services as much as 70%. Pay ₹73 every month to Family organizer (Krishna) to continue family plan. Or pay with PayTM using below button anytime. UPI Auto-payments coming soon. You can track billing on this page every month starting Jun 19, 2022.</p>
-						<a href="https://paytm.me/hX-V4uB" data-analytics-title="try apple one free" class="icon-wrapper button button-elevated" data-rid-relay="{&quot;298&quot;:&quot;itsct&quot;}" data-analytics-exit-link=""><span class="icon-copy">Pre-pay via PayTM</span></a> </div>
+						<a href="https://paytm.me/hX-V4uB" class="icon-wrapper button button-elevated" data-rid-relay="{&quot;298&quot;:&quot;itsct&quot;}" data-analytics-exit-link=""><span class="icon-copy">Pre-pay via PayTM</span></a> </div>
 					<div class="plans-tiles icloud-plus">
 						
 						<div class="plan-tile plan-family gallery-item fade-in animate" data-component-list="TriggerAnimation">
@@ -146,10 +146,6 @@
 			</div>
 		</section>
 		
-		<div class="section section-free-trial layout-1 sticking show" data-component-list="StickyButton" data-anim-scroll-group="Sticky Button">
-			<div class="sticky-button-container section-content">
-				<a href="https://one.apple.com/in?itscg=10000&amp;itsct=one-NA-discover-lp-apl-avl-102020" data-analytics-title="try apple one free" data-analytics-exit-link="" class="icon-wrapper button button-elevated button-sticky" data-analytics-activitymap-region-id="free trial sticky" data-rid-relay="{&#39;298&#39;:&#39;itsct&#39;}" style="transform: translateY(0px);"><span class="icon-copy">Try Apple One free</span></a> </div>
-		</div>
 		<section class="section section-faq layout-1" data-component-list="Accordion" data-anim-scroll-group="Section - FAQ" data-analytics-section-engagement="name:faq">
 			<div class="section-content">
 				<h2 class="typography-section-headline large-centered large-7 medium-8 small-12">Questions? </h2>
@@ -181,19 +177,19 @@
 					<div class="chiclet chiclet-music theme-light animate" data-component-list="TriggerAnimation" data-breakpoint-mask="MLX">
 						<figure class="chiclet-icon icon-music"></figure>
 						<h3 class="typography-router-copy">Apple&nbsp;Music</h3>
-						<p class="typography-router-cta"><a href="https://www.apple.com/in/apple-music/" data-analytics-title="learn more about apple music" data-analytics-region="learn more" aria-label="Learn more about Apple Music" class="icon-wrapper"><span class="icon-copy">Learn more</span><span class="icon icon-after more"></span></a>
+						<p class="typography-router-cta"><a href="https://www.apple.com/in/apple-music/" data-analytics-title="learn more about apple music" data-analytics-region="learn more" aria-label="Learn more about Apple Music" class="icon-wrapper"><span class="icon-copy">Learn more</span><span class="icon icon-after more"></span></a>
 						</p>
 					</div>
 					<div class="chiclet chiclet-tv theme-light animate" data-component-list="TriggerAnimation" data-breakpoint-mask="MLX">
 						<figure class="chiclet-icon icon-tv"></figure>
 						<h3 class="typography-router-copy">Apple&nbsp;TV+</h3>
-						<p class="typography-router-cta"><a href="https://www.apple.com/in/apple-tv-plus/" data-analytics-title="learn more about apple tv plus" data-analytics-region="learn more" aria-label="Learn more about Apple TV+" class="icon-wrapper"><span class="icon-copy">Learn more</span><span class="icon icon-after more"></span></a>
+						<p class="typography-router-cta"><a href="https://www.apple.com/in/apple-tv-plus/" data-analytics-title="learn more about apple tv plus" data-analytics-region="learn more" aria-label="Learn more about Apple TV+" class="icon-wrapper"><span class="icon-copy">Learn more</span><span class="icon icon-after more"></span></a>
 						</p>
 					</div>
 					<div class="chiclet chiclet-arcade theme-light animate" data-component-list="TriggerAnimation" data-breakpoint-mask="MLX">
 						<figure class="chiclet-icon icon-arcade"></figure>
 						<h3 class="typography-router-copy">Apple&nbsp;Arcade</h3>
-						<p class="typography-router-cta"><a href="https://www.apple.com/in/apple-arcade/" data-analytics-title="learn more about apple arcade" data-analytics-region="learn more" aria-label="Learn more about Apple Arcade" class="icon-wrapper"><span class="icon-copy">Learn more</span><span class="icon icon-after more"></span></a>
+						<p class="typography-router-cta"><a href="https://www.apple.com/in/apple-arcade/" data-analytics-title="learn more about apple arcade" data-analytics-region="learn more" aria-label="Learn more about Apple Arcade" class="icon-wrapper"><span class="icon-copy">Learn more</span><span class="icon icon-after more"></span></a>
 						</p>
 					</div>
 					<div class="chiclet chiclet-icloud theme-light animate" data-component-list="TriggerAnimation" data-breakpoint-mask="MLX">
