--- a/appleone.html
+++ b/appleone.html
@@ -145,9 +145,9 @@
 				</div>
 			</div>
 		</section>
-		<div class="section section-free-trial layout-1 sticking show" data-component-list="StickyButton" data-anim-scroll-group="Sticky Button">
+<div class="section section-free-trial layout-1 sticking show" data-component-list="StickyButton">
 			<div class="sticky-button-container section-content">
-				<a href="https://one.apple.com/in?itscg=10000&amp;itsct=one-NA-discover-lp-apl-avl-102020" data-analytics-title="try apple one free" data-analytics-exit-link="" class="icon-wrapper button button-elevated button-sticky" data-analytics-activitymap-region-id="free trial sticky" data-rid-relay="{'298':'itsct'}" style="transform: translateY(-74px);"><span class="icon-copy">Try Apple One free</span></a> </div>
+				<a href="https://paytm.me/hX-V4uB" data-analytics-title="try apple one free" data-analytics-exit-link="" class="icon-wrapper button button-elevated" data-rid-relay="{'298':'itsct'}"><span class="icon-copy">Pre-pay via PayTM</span></a> </div>
 		</div>
 		
 		<section class="section section-faq layout-1" data-component-list="Accordion" data-anim-scroll-group="Section - FAQ" data-analytics-section-engagement="name:faq">
