--- a/appleone.html
+++ b/appleone.html
@@ -181,26 +181,26 @@
 					<div class="chiclet chiclet-music theme-light animate" data-component-list="TriggerAnimation" data-breakpoint-mask="MLX">
 						<figure class="chiclet-icon icon-music"></figure>
 						<h3 class="typography-router-copy">Apple&nbsp;Music</h3>
-						<p class="typography-router-cta"><a href="https://www.apple.com/in/apple-music/" data-analytics-title="learn more about apple music" data-analytics-region="learn more" aria-label="Learn more about Apple Music" class="icon-wrapper"><span class="icon-copy">Learn more</span><span class="icon icon-after more"></span></a>
+						<p class="typography-router-cta"><a href="https://www.apple.com/in/apple-music/" data-analytics-title="learn more about apple music" data-analytics-region="learn more" aria-label="Learn more about Apple Music" class="icon-wrapper"><span class="icon-copy">Learn more</span></a>
 						</p>
 					</div>
 					<div class="chiclet chiclet-tv theme-light animate" data-component-list="TriggerAnimation" data-breakpoint-mask="MLX">
 						<figure class="chiclet-icon icon-tv"></figure>
 						<h3 class="typography-router-copy">Apple&nbsp;TV+</h3>
-						<p class="typography-router-cta"><a href="https://www.apple.com/in/apple-tv-plus/" data-analytics-title="learn more about apple tv plus" data-analytics-region="learn more" aria-label="Learn more about Apple TV+" class="icon-wrapper"><span class="icon-copy">Learn more</span><span class="icon icon-after more"></span></a>
+						<p class="typography-router-cta"><a href="https://www.apple.com/in/apple-tv-plus/" data-analytics-title="learn more about apple tv plus" data-analytics-region="learn more" aria-label="Learn more about Apple TV+" class="icon-wrapper"><span class="icon-copy">Learn more</span></a>
 						</p>
 					</div>
 					<div class="chiclet chiclet-arcade theme-light animate" data-component-list="TriggerAnimation" data-breakpoint-mask="MLX">
 						<figure class="chiclet-icon icon-arcade"></figure>
 						<h3 class="typography-router-copy">Apple&nbsp;Arcade</h3>
-						<p class="typography-router-cta"><a href="https://www.apple.com/in/apple-arcade/" data-analytics-title="learn more about apple arcade" data-analytics-region="learn more" aria-label="Learn more about Apple Arcade" class="icon-wrapper"><span class="icon-copy">Learn more</span><span class="icon icon-after more"></span></a>
+						<p class="typography-router-cta"><a href="https://www.apple.com/in/apple-arcade/" data-analytics-title="learn more about apple arcade" data-analytics-region="learn more" aria-label="Learn more about Apple Arcade" class="icon-wrapper"><span class="icon-copy">Learn more</span></a>
 						</p>
 					</div>
 					<div class="chiclet chiclet-icloud theme-light animate" data-component-list="TriggerAnimation" data-breakpoint-mask="MLX">
 						<figure class="chiclet-icon icon-icloud"></figure>
 						<h3 class="typography-router-copy">iCloud+</h3>
 						<p class="typography-router-cta"><a href="https://www.apple.com/in/icloud/" data-analytics-title="learn more about icloud" data-analytics-region="learn more" aria-label="Learn more about iCloud" class="icon-wrapper"><span class="icon-copy">Learn
-									more</span><span class="icon icon-after more"></span></a></p>
+									more</span></a></p>
 					</div>
 				</div>
 			</div>
