--- a/results.html
+++ b/results.html
@@ -56,6 +56,7 @@ margin: 0 auto;
     <body>
 <div class="select">
   <select id="mySelect">
+  <option selected disabled>select semester</option>
     <option value="1289">Regular 1-2</option>
     <option value="1319">Regular 2-1</option>
     <option value="1341">Regular 2-2</option>
