--- a/results.html
+++ b/results.html
@@ -57,6 +57,7 @@ margin: 0 auto;
 <div class="select">
   <select id="mySelect">
   <option selected disabled>select semester</option>
+      <optgroup label="Regular R16">
     <option value="1289">Regular 1-2</option>
     <option value="1319">Regular 2-1</option>
     <option value="1341">Regular 2-2</option>
@@ -65,6 +66,7 @@ margin: 0 auto;
     <option value="1446">Regular 3-2(covid)</option>
     <option value="1459">Regular 4-1</option>
     <option value="1463">Regular 4-2</option>
+	<optgroup label="Supplementary R16">
   </select></div><p class="w3-center">Supplementary results coming soon</P><br><br><br><br>
 <div id="parent">
         <form id="frmTest" method="get" action="" onsubmit="return validateForm();">
