--- a/results.html
+++ b/results.html
@@ -75,7 +75,7 @@ margin: 0 auto;
         </form></div><br><br><br>
         <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
 
-  <p class="w3-medium">Regular 1-1 Results are not available on JNTUH servers</p>
+  <p class="w3-medium">R16 Regular 1-1 Results are not available on JNTUH servers</p>
   <p class="w3-medium">This page uses python to get past Captcha and get results directly from JNTUH servers. Uses serveral different methods to extract the results, works as long as servers are available.</p>
 </footer>
     </body>
