--- a/results.html
+++ b/results.html
@@ -67,6 +67,27 @@ margin: 0 auto;
     <option value="1459">Regular 4-1</option>
     <option value="1463">Regular 4-2</option>
 	<optgroup label="Supplementary R16">
+	<option value="1302">1-1 July 2018</option>
+	<option value="1310">1-2 Sep 2018</option>
+	<option value="1324">1-1 Feb 2019</option>
+	<option value="1352">2-1 July 2019</option>
+	<option value="1357">1-2 July 2019</option>
+	<option value="1382">1-2 Sep 2019(ADV Supple)</option>
+	<option value="1392">2-1 Feb 2020</option>
+	<option value="1400">2-2 Feb 2020</option>
+	<option value="1405">1-1 Mar 2020</option>
+	<option value="1421">3-1 Jan 2021</option>
+	<option value="1426">2-1 Jan 2021</option>
+	<option value="1438">2-2 Jan 2021</option>
+	<option value="1455">3-1 Jul 2021</option>
+	<option value="1450">2-1 Jul 2021</option>
+	<option value="1468">1-1 Sep 2021</option>
+	<option value="1477">2-2 Sep 2021</option>
+	<option value="1472">3-2 Sep 2021</option>
+	<option value="1487">4-1 Oct 2021</option>
+	<option value="1492">3-1 Nov 2021</option>
+	<option value="1497">2-1 Nov 2021</option>
+	<option value="1505">1-1 Nov 2021</option>
   </select></div><p class="w3-center">Supplementary results coming soon</P><br><br><br><br>
 <div id="parent">
         <form id="frmTest" method="get" action="" onsubmit="return validateForm();">
