--- a/results.html
+++ b/results.html
@@ -88,7 +88,7 @@ margin: 0 auto;
 	<option value="1492">3-1 Nov 2021</option>
 	<option value="1497">2-1 Nov 2021</option>
 	<option value="1505">1-1 Nov 2021</option>
-  </select></div><p class="w3-center">Supplementary results coming soon</P><br><br><br><br>
+  </select></div><p class="w3-center">R18 results coming soon</P><br><br><br><br>
 <div id="parent">
         <form id="frmTest" method="get" action="" onsubmit="return validateForm();">
             <input id="txtValue" type="text" value="Enter Roll number" onfocus="if (this.value == 'Enter Roll number') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Enter Roll number';}"></br></br></br>
