--- a/results.html
+++ b/results.html
@@ -88,6 +88,10 @@ margin: 0 auto;
 	<option value="1492">3-1 Nov 2021</option>
 	<option value="1497">2-1 Nov 2021</option>
 	<option value="1505">1-1 Nov 2021</option>
+	<option value="1546">4-1 May 2022</option>
+	<option value="1551">3-1 May 2022</option>
+	<option value="1556">3-2 May 2022</option>
+	  <optgroup label="Regular R18">
   </select></div><p class="w3-center">R18 results coming soon</P><br><br><br><br>
 <div id="parent">
         <form id="frmTest" method="get" action="" onsubmit="return validateForm();">
