--- a/whatsapp.html
+++ b/whatsapp.html
@@ -44,6 +44,6 @@ input[type=submit] {
         <form id="frmTest" method="get" action="" onsubmit="return validateForm();">
             <input id="txtValue" type="text" value="Enter number" onfocus="if (this.value == 'Enter number') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Enter number';}"></br></br></br>
             <input style = "font-size:35px; margin:0px auto; display:block;"id="btnSubmit" type="submit" value="Submit">
-        </form></br></br></br><a href="https://wa.me/919177043770?text=Hey%2C%20im%20a%20great%20fan%20of%20you.%20You%20are%20awesome%20man%2C%20your%20site%20is%20awesome%2C%20totally%20you%20are%20aweome%20awesome%20awwsome.%20Are%20you%20Batman%3F%3F">Text me on whatsapp</a></div>
+        </form></br></br></br></div>
     </body>
 </html>
