--- a/movies.html
+++ b/movies.html
@@ -13,7 +13,7 @@ body {
             <source src="https://de17.seedr.cc/ff_get/1175980054/Top%20Gun%20(1986)%201080p%20BrRip%20x264%201.29GB%20YIFY.mp4?st=E4sQyu5hZZCkoOqAzS8i3Q&amp;e=1654233938" type="video/mp4" title="1080p" playsinline/>
 <track kind="subtitles" src="subs.vtt" srclang="en" label="English" />
 <source src="https://de17.seedr.cc/ff_get/1175980054/Top%20Gun%20(1986)%201080p%20BrRip%20x264%201.29GB%20YIFY.mp4?st=E4sQyu5hZZCkoOqAzS8i3Q&amp;e=1654233938" type="video/mp4" title="720p" playsinline>
-        <track kind="subtitles" src="subs.vtt" srclang="en" label="English" /></video>
+</video>
         <script src="https://cdn.jsdelivr.net/npm/openplayerjs@latest/dist/openplayer.min.js"></script>
 
         <script>
