--- a/p3.html
+++ b/p3.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv = "refresh" content = "0; url = phonepe://upi//pay?pa=9177043770@ybl&pn=Tarun&am=1&tn=Netflix1Month&cu=INR" />
+<html><head><meta http-equiv = "refresh" content = "0; url = phonepe://upi//pay?pa=9177043770@ybl&pn=Tarun&am=390&tn=Netflix 1 Month&cu=INR" />
 </head><body></body></html>
