--- a/movies.html
+++ b/movies.html
@@ -8,7 +8,7 @@ body {
 </style>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/openplayerjs@latest/dist/openplayer.min.css" />
     </head>
-    <body><p>lol</p>
+    <body>
         <video class="op-player__media" id="player" controls webkit-playsinline="true" playsinline>
             <source src="https://rs2.seedr.cc/ff_get/1177005241/The.Kashmir.Files.2022.1080p.MULTi.WEB-DL.H.264.DDP5.1-NbT.mkv?st=gqIr6vJQhORr-ETXMpIbyg&e=1654366392" type="video/mp4" title="1080p" playsinline/>
 <track kind="subtitles" src="subsq.vtt" srclang="en" label="English" />
