--- a/dns.html
+++ b/dns.html
@@ -5,80 +5,80 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
-body {font-size: 16px;}
-img {margin-bottom: -8px;}
-.mySlides {display: none;}
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+
+body, html {
+  height: 100%;
+  line-height: 1.8;
+}
+
+/* Full height image header */
+.bgimg-1 {
+  background-position: center;
+  background-size: cover;
+  background-image: url("/w3images/mac.jpg");
+  min-height: 100%;
+}
+
+.w3-bar .w3-button {
+  padding: 16px;
+}
 </style>
 </head>
-<body class="w3-content w3-black" style="max-width:1500px;">
+<body>
 
-<!-- Header with Slideshow -->
-<header class="w3-display-container w3-center">
-  <button class="w3-button w3-block w3-green w3-hide-large w3-hide-medium" onclick="document.getElementById('download').style.display='block'">Download <i class="fa fa-android"></i> <i class="fa fa-apple"></i> <i class="fa fa-windows"></i></button>
-  <div class="mySlides w3-animate-opacity">
-    <img class="w3-image" src="https://www.w3schools.com/w3images/app.jpg" alt="Image 1" style="min-width:500px" width="1500" height="1000">
-    <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
-      <div class="w3-black w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
-        <h1 class="w3-xlarge">Android 9 or higher</h1>
-        <hr class="w3-opacity">
-        <p>1. Go to Settings → Network & internet → Advanced → Private DNS.</p>
-<p>2. Select the Private DNS provider hostname option.</p>
-<p>3. Enter dns.tarunx.me/dns-query and hit Save.</p>
 
-      </div>
+
+<!-- Header with full-height image -->
+<header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
+  <div class="w3-display-left w3-text-white" style="padding:48px">
+    <span class="w3-jumbo w3-hide-small">because Privacy is a fundamental human right.</span><br>
+
+    <span class="w3-large">Powerful filters to eliminate ads and trackers on every device - even inside Apps</span>
+
+  </div> 
+
+</header>
+
+<!-- Promo Section - "We know design" -->
+<div class="w3-container w3-light-grey" style="padding:128px 16px">
+  <div class="w3-row-padding">
+    <div class="w3-col m6">
+      <h3>Private DNS on Android</h3>
+    <p>1. Go to Settings → Network & internet → Advanced → Private DNS.</p>
+    <p>2. Select the Private DNS provider hostname option.</p>
+    <p>3. Enter dns.tarunx.me/dns-query and hit Save.</p>
     </div>
   </div>
-  <div class="mySlides w3-animate-opacity">
-    <img class="w3-image" src="https://www.w3schools.com/w3images/app2.jpg" alt="Image 2" style="min-width:500px" width="1500" height="1000">
-    <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
-      <div class="w3-black w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
-        <h1 class="w3-xlarge w3-text-red"><b>iPhones & iPads</h1>
-        <hr class="w3-opacity">
-        <p>1. Download the configuration profile.</p>
+</div>
+
+<!-- Promo Section - "We know design" -->
+<div class="w3-container w3-light-grey" style="padding:128px 16px">
+  <div class="w3-row-padding">
+    <div class="w3-col m6">
+      <h3>Private DNS on iPhones & iPads</h3>
+    <p>1. Download the configuration profile.</p>
     <p>2. Open the Settings app.</p>
     <p>3. Tap Profile Downloaded.</p>
     <p>4. Tap Install in the upper-right corner, and follow the onscreen instructions.</p>
-        <a href="https://cdn.discordapp.com/attachments/914907771063894059/1141045234130751628/dns-profile.mobileconfig" <button class="w3-button w3-block w3-red w3-round" >Download <i class="fa fa-apple"></i> </i></button>></a>
-      </div>
+      <p><a href="https://cdn.discordapp.com/attachments/914907771063894059/1141045234130751628/dns-profile.mobileconfig" class="w3-button w3-black"><i class="fa fa-apple"></i> </i>Download Config profile</a></p>
+    </div>
+    <div class="w3-col m6">
+      <img class="w3-image w3-round-large" src="https://www.w3schools.com/w3images/phone_buildings.jpg" alt="Buildings" width="700" height="394">
     </div>
   </div>
-  <a class="w3-button w3-black w3-display-right w3-margin-right w3-round w3-hide-small w3-hover-light-grey" onclick="plusDivs(1)">other devices <i class="fa fa-angle-right"></i></a>
-  <a class="w3-button w3-block w3-black w3-hide-large w3-hide-medium" onclick="plusDivs(1)">Take Tour <i class="fa fa-angle-right"></i></a>
-</header>
-
-
-
+</div>
 
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-32 w3-light-grey w3-center w3-xlarge">
-  <p class="w3-medium">All rights reserved <a href="https://www.tarunx.me" target="_blank" class="w3-hover-text-green">tarunx.me</a></p>
+<footer class="w3-center w3-black w3-padding-64">
+  <p>All rights reserved <a href="https://www.tarunx.me" title="tarunx.me" target="_blank" class="w3-hover-text-green">tarunx.me</a></p>
 </footer>
+ 
 
-<script>
-// Slideshow
-var slideIndex = 1;
-showDivs(slideIndex);
-
-function plusDivs(n) {
-  showDivs(slideIndex += n);
-}
-
-function showDivs(n) {
-  var i;
-  var x = document.getElementsByClassName("mySlides");
-  if (n > x.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = x.length}
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";  
-  }
-  x[slideIndex-1].style.display = "block";  
-}
-</script>
 
 </body>
 </html>
