--- a/dns.html
+++ b/dns.html
@@ -35,7 +35,7 @@ body, html {
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small">because Privacy is a fundamental human right.</span><br>
+    <span class="w3-jumbo">because Privacy is a fundamental human right.</span><br>
 
     <span class="w3-large">Powerful filters to eliminate ads and trackers on every device - even inside Apps</span>
 
