--- a/dns.html
+++ b/dns.html
@@ -50,7 +50,7 @@ body, html {
       <h3>Private DNS on Android</h3>
     <p>1. Go to Settings → Network & internet → Advanced → Private DNS.</p>
     <p>2. Select the Private DNS provider hostname option.</p>
-    <p>3. Enter <b>dns.tarunx.me/dns-query</b> and hit Save.</p>
+    <p>3. Enter <b>https://dns.tarunx.me/dns-query</b> and hit Save.</p>
     </div>
   </div>
 </div>
