--- a/dns.html
+++ b/dns.html
@@ -56,6 +56,14 @@ body, html {
 
 </div>
 
+<div class="w3-container w3-padding-64 w3-white w3-center w3-wide">
+  <h1>Natively supported on all major platforms — it only takes a few seconds to set up.</h1>
+  <p class="w3-large">Enjoy the privacy and security benefits of DNS-over-HTTPS and DNS-over-TLS — the modern and encrypted DNS protocols.
+Cover all networks — at home, on cellular, at work and on public Wi-Fi.
+Zero impact on your CPU, memory or battery life — it's all done at the DNS level, not on your device.
+</p>
+
+</div>
 <!-- Promo Section - "We know design" -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
