--- a/dns.html
+++ b/dns.html
@@ -93,6 +93,24 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
   </div>
 </div>
 
+<div class="w3-container w3-light-grey" style="padding:128px 16px">
+  <div class="w3-row-padding">
+    <div class="w3-col m6">
+        <h3>Private DNS on Windows</h3>
+        <h6>DNS over HTTPS on Windows 11</h6>
+    <p>1. Open the Settings app.</p>
+    <p>2. Go to Network & internet.</p>
+    <p>3. Click on Wi-Fi (or Ethernet).</p>
+    <p>4. Click on Hardware properties, or ignore this step if you clicked on Ethernet.</p>
+    <p>5. Click the Edit button next to DNS server assignment.</p>
+    <p>6. Select Manual.</p>
+    <p>7. Enable IPv4.</p>
+    <p>8. Enter <b>139.59.89.163</b> as Preferred DNS, then select On (manual template) and enter <b>https://dns.tarunx.me/dns-query</b>.</p>
+    <p>9. Click Save.</p>
+    </div>
+  </div>
+</div>
+
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
