--- a/dns.html
+++ b/dns.html
@@ -96,8 +96,7 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-        <h3>Private DNS on Windows</h3>
-        <h6>DNS over HTTPS on Windows 11</h6>
+        <h3>Private DNS on Windows 11</h3>
     <p>1. Open the Settings app.</p>
     <p>2. Go to Network & internet.</p>
     <p>3. Click on Wi-Fi (or Ethernet).</p>
@@ -111,6 +110,22 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
   </div>
 </div>
 
+<div class="w3-container w3-light-grey" style="padding:128px 16px">
+  <div class="w3-row-padding">
+    <div class="w3-col m6">
+        <h3>Private DNS on Windows 10</h3>
+    <p>1. Click on the Start menu, then click on Control Panel.</p>
+    <p>2. Click on Network and Internet, then Network and Sharing Center.</p>
+    <p>3. Click on Change Adapter Settings.</p>
+    <p>4. Right click on the Wi-Fi network you are connected to, then click Properties.</p>
+    <p>5. Select Internet Protocol Version 4.</p>
+    <p>6. Click Properties.</p>
+    <p>7. Click Use The Following DNS Server Addresses.</p>
+    <p>8.  Replace the current addresses (if any) with <b>139.59.89.163</b> and <b>139.59.89.163</b>.</p>
+    <p>9. Click OK, then Close. You may need to restart your system.</p>
+    </div>
+  </div>
+</div>
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
