--- a/dns.html
+++ b/dns.html
@@ -81,10 +81,10 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>Private DNS on iPhones & iPads</h3>
-    <p>1. Download the configuration profile.</p>
-    <p>2. Open the Settings app.</p>
-    <p>3. Tap Profile Downloaded.</p>
-    <p>4. Tap Install in the upper-right corner, and follow the onscreen instructions.</p>
+    <p>1. <b>Download</b> the configuration profile.</p>
+    <p>2. Open the <b>Settings</b> app.</p>
+    <p>3. <b>Tap Profile Downloaded</b>.</p>
+    <p>4. <b>Tap Install</b> in the upper-right corner, and follow the onscreen instructions.</p>
       <p><a href="https://cdn.discordapp.com/attachments/914907771063894059/1141045234130751628/dns-profile.mobileconfig" class="w3-button w3-black"><i class="fa fa-apple"></i> </i>Download Config profile</a></p>
     </div>
     <div class="w3-col m6">
@@ -126,6 +126,59 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
     </div>
   </div>
 </div>
+
+<div class="w3-container w3-light-grey" style="padding:128px 16px">
+  <div class="w3-row-padding">
+    <div class="w3-col m6">
+      <h3>Private DNS on Macbooks</h3>
+    <p>1. <b>Download</b> the configuration profile.</p>
+    <p>2. Open the downloaded <b>.mobileconfig</b> file.</p>
+    <p>3. Open <b>System Preferences</b>.</p>
+    <p>4. Go to <b>Profiles</b>.</p>
+    <p>5. Click <b>Install</b>.</p>
+      <p><a href="https://cdn.discordapp.com/attachments/914907771063894059/1141045234130751628/dns-profile.mobileconfig" class="w3-button w3-black"><i class="fa fa-apple"></i> </i>Download Config profile</a></p>
+    </div>
+  </div>
+</div>
+
+<div class="w3-container w3-light-grey" style="padding:128px 16px">
+  <div class="w3-row-padding">
+    <div class="w3-col m6">
+      <h3>Private DNS on Firefox browser</h3>
+    <p>1. Open Preferences.</p>
+    <p>2. Scroll down to the Network Settings section and click on Settings.</p>
+    <p>3. Scroll down and check Enable DNS over HTTPS.</p>
+    <p>4. Select Custom, enter <b>https://dns.tarunx.me/dns-query</b> and click OK.</p>
+    <p>5. Enter "about:config" in the address bar (and click on I Accept the risk! if asked).</p>
+    <p>6. Set network.trr.mode to <b>3</b>.</p>
+    </div>
+  </div>
+</div>
+
+<div class="w3-container w3-light-grey" style="padding:128px 16px">
+  <div class="w3-row-padding">
+    <div class="w3-col m6">
+      <h3>Private DNS on Google Chrome browser</h3>
+    <p>1. Go to Settings.</p>
+    <p>2. In the Privacy and security section, click on Security.</p>
+    <p>3. In the Advanced section, enable Use secure DNS.</p>
+    <p>4. Select With: Custom, then enter <b>https://dns.tarunx.me/dns-query</b>.</p>
+    </div>
+  </div>
+</div>
+
+<div class="w3-container w3-light-grey" style="padding:128px 16px">
+  <div class="w3-row-padding">
+    <div class="w3-col m6">
+      <h3>Private DNS on Brave browser</h3>
+    <p>1. Open Settings.</p>
+    <p>2. In the Privacy and security section (under Additional settings), go to Security.</p>
+    <p>3. In the Advanced section, enable Use secure DNS.</p>
+    <p>4. Select With: Custom, then enter <b>https://dns.tarunx.me/dns-query</b>.</p>
+    </div>
+  </div>
+</div>
+
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
