--- a/dns.html
+++ b/dns.html
@@ -48,7 +48,9 @@ body, html {
 
 </header>
 
-<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/855308067?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="What is Private DNS"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+<video width="100%" height="240" controls preload="auto">
+  <source src="https://github.com/tarunkumar519/tarunkumar519.github.io/releases/download/m1/dns.mp4" type="video/mp4">
+</video>
   
 <div class="w3-display-container bgimg2">
 </div>
