--- a/dns.html
+++ b/dns.html
@@ -48,9 +48,10 @@ body, html {
 
 </header>
 
-<video width="100%" height="240" controls preload="auto">
+<div style="padding:56.25% 0 0 0;position:relative;">
+<video width="100%" height="240" controls preload="auto" style="position:absolute;top:0;left:0;width:100%;height:100%;">
   <source src="https://github.com/tarunkumar519/tarunkumar519.github.io/releases/download/m1/dns.mp4" type="video/mp4">
-</video>
+</video></div>
   
 <div class="w3-display-container bgimg2">
 </div>
