--- a/dns.html
+++ b/dns.html
@@ -49,7 +49,7 @@ body, html {
 </header>
 
 <div style="padding:56.25% 0 0 0;position:relative;">
-<video width="100%" height="240" controls preload="auto" style="position:absolute;top:0;left:0;width:100%;height:100%;">
+<video controls preload="auto" poster="https://github-production-user-asset-6210df.s3.amazonaws.com/61449919/261317216-3429e64d-7801-44c3-bd4d-40141327a0d5.png" style="position:absolute;top:0;left:0;width:100%;height:100%;">
   <source src="https://github.com/tarunkumar519/tarunkumar519.github.io/releases/download/m1/dns.mp4" type="video/mp4">
 </video></div>
   
