--- a/dns.html
+++ b/dns.html
@@ -42,7 +42,7 @@ body, html {
   <div class="w3-display-left w3-text-white" style="padding:48px">
     <span class="w3-xxxlarge">because Privacy is a fundamental human right.</span><br>
 
-    <span class="w3-large">Powerful filters to eliminate ads and trackers on every device - even inside Apps</span>
+    <span class="w3-large">Powerful filters to block ads and trackers on every device - even inside Apps</span>
 
   </div> 
 
