--- a/dns.html
+++ b/dns.html
@@ -187,12 +187,12 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>Private DNS on Router (Advanced)</h3>
+      <h3 id="router">Private DNS on Router (Advanced)</h3>
     <p>1. Open the preferences for your router. Usually you can access it from your browser via a URL (like http://192.168.0.1/ or http://192.168.1.1/).</p>
     <p>2. Locate the DNS settings inside the interface. Maybe inside DHCP settings on most routers.</p>
     <p>3. Remove all addresses (if any) inside primary and secondary DNS server boxes then add <b>139.59.89.163</b> and <b>139.59.89.163</b>.</p>
     <p>4. Click Save (or similar).</p>
-    <h4>All devices connected to that WiFi-network will have private DNS automatically. If Private DNS is already installed on any device, it won't be a problem. The device will prefer the device installed one rather than router.</h4>
+    <h4>All devices connected to the WiFi-network will have private DNS automatically. If Private DNS is already installed on any device, it won't be a problem. The device will prefer the device installed one rather than router.</h4>
     </div>
   </div>
 </div>
