--- a/dns.html
+++ b/dns.html
@@ -73,7 +73,7 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>Private DNS on Android</h3>
+      <h3 id="android">Private DNS on Android</h3>
     <p>1. Go to Settings → Network & internet → Advanced → Private DNS.</p>
     <p>2. Select the Private DNS provider hostname option.</p>
     <p>3. Enter <b>dns.tarunx.me</b> and hit Save.</p>
@@ -85,7 +85,7 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>Private DNS on iPhones & iPads</h3>
+      <h3 id="iphone">Private DNS on iPhones & iPads</h3>
     <p>1. <b>Download</b> the configuration profile.</p>
     <p>2. Open the <b>Settings</b> app.</p>
     <p>3. <b>Tap Profile Downloaded</b>.</p>
@@ -101,7 +101,7 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-        <h3>Private DNS on Windows 11</h3>
+        <h3 id="windows11">Private DNS on Windows 11</h3>
     <p>1. Open the Settings app.</p>
     <p>2. Go to Network & internet.</p>
     <p>3. Click on Wi-Fi (or Ethernet).</p>
@@ -118,7 +118,7 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-        <h3>Private DNS on Windows 10</h3>
+        <h3 id="windows10">Private DNS on Windows 10</h3>
     <p>1. Click on the Start menu, then click on Control Panel.</p>
     <p>2. Click on Network and Internet, then Network and Sharing Center.</p>
     <p>3. Click on Change Adapter Settings.</p>
@@ -135,7 +135,7 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>Private DNS on Macbooks</h3>
+      <h3 id="mac">Private DNS on Macbooks</h3>
     <p>1. <b>Download</b> the configuration profile.</p>
     <p>2. Open the downloaded <b>.mobileconfig</b> file.</p>
     <p>3. Open <b>System Preferences</b>.</p>
@@ -149,7 +149,7 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>Private DNS on Firefox browser</h3>
+      <h3 id="firefox">Private DNS on Firefox browser</h3>
     <p>1. Open Preferences.</p>
     <p>2. Scroll down to the Network Settings section and click on Settings.</p>
     <p>3. Scroll down and check Enable DNS over HTTPS.</p>
@@ -163,7 +163,7 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>Private DNS on Google Chrome browser</h3>
+      <h3 id="chrome">Private DNS on Google Chrome browser</h3>
     <p>1. Go to Settings.</p>
     <p>2. In the Privacy and security section, click on Security.</p>
     <p>3. In the Advanced section, enable Use secure DNS.</p>
@@ -175,7 +175,7 @@ Zero impact on your CPU, memory or battery life — it's all done at the DNS lev
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>Private DNS on Brave browser</h3>
+      <h3 id="brave">Private DNS on Brave browser</h3>
     <p>1. Open Settings.</p>
     <p>2. In the Privacy and security section (under Additional settings), go to Security.</p>
     <p>3. In the Advanced section, enable Use secure DNS.</p>
